refactor: use spotless